--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'xyz.wagyourtail.unimined' version '1.3.15'
+    id 'xyz.wagyourtail.unimined' version '1.4.2-SNAPSHOT'
 }
 
 group = project.property('group')
@@ -40,7 +40,7 @@ unimined {
         mappings {
             retroMCP("b1.7")
 
-            stub.withMappings(['searge', 'mcp']) {
+            stubs(['official', 'retroMCP']) {
                 def base = 'net/minecraft/src'
                 def mapClass = { name ->
                     def path = "$base/$name"
