--- a/settings.gradle
+++ b/settings.gradle
@@ -3,6 +3,10 @@ pluginManagement {
         mavenCentral()
         gradlePluginPortal()
 
-        maven { url 'https://maven.wagyourtail.xyz/releases' }
+        maven { url 'https://maven.wagyourtail.xyz/releases'
+        }
+
+        maven { url 'https://maven.wagyourtail.xyz/snapshots'
+        }
     }
 }
